public/stylesheets/sass/spotlight_header.scss
#menuC { margin-bottom : 4px; }
#mainC div#tab_arrow {
    display : block;
    left : 430px;
    top  : 2px;
}
#mainC img#top {
    background : url(/images/page_banners/spotlight.png) no-repeat scroll 0px 0px transparent;
    height : 106px;
}
ul.breadcrumbC {
    margin-top : 10px;
}

